@@ -1,0 +1,127 @@
+{
+    "$schema": "http://json-schema.org/draft-07/schema#",
+    "$id": "file:///usr/share/saptune/schemas/1.0/saptune_configure.schema.json",
+    "title": "",
+    "description": "Describes the output of 'saptune configure.",
+    "type": "object",
+    "required": [
+        "$schema",
+        "publish time",
+        "argv",
+        "pid",
+        "command",
+        "exit code",
+        "result",
+        "messages"
+    ],
+    "additionalProperties": true,
+    "propertyNames": {
+        "enum": [
+            "$schema",
+            "publish time",
+            "argv",
+            "pid",
+            "command",
+            "exit code",
+            "result",
+            "messages",
+            "Angela's pieces of wisdom"
+        ]
+    },
+    "properties": {
+        "$schema": {
+            "description": "URI to the schema definition",
+            "type": "string"
+        },
+        "publish time": {
+            "description": "saptune timestamp of the time this JSON object was created.",
+            "type": "string",
+            "pattern": "^((?:(\\d{4}-\\d{2}-\\d{2}) (\\d{2}:\\d{2}:\\d{2}(?:\\.\\d{3})?)))$",
+            "examples": [
+                "2022-02-16 10:51:41.163",
+                "2022-01-28 17:26:19.661"
+            ]
+        },
+        "argv": {
+            "description": "The entire saptune command as it was called.",
+            "type": "string",
+            "minLength": 7,
+            "examples": [
+                "saptune --format=json note list",
+                "saptune --format=json version",
+                "saptune --format=json json status"
+            ]
+        },
+        "pid": {
+            "description": "PID of the saptune process creating this object.",
+            "type": "integer",
+            "minimum": 2
+        },
+        "command": {
+            "description": "The saptune command (classifier), which was executed.",
+            "type": "string",
+            "enum": [
+                "configure"
+            ]
+        },
+        "result": {
+            "description": "The result (output) of the command.",
+            "type": "object",
+            "required": [
+                "implemented"
+            ],
+            "additionalProperties": false,
+            "properties": {
+                "implemented": {
+                    "description": "Indicates that JSON output has not yet been implemented yet.",
+                    "type": "boolean",
+                    "enum": [
+                        false
+                    ]
+                }
+            }
+        },
+        "exit code": {
+            "description": "The return code the saptune command terminated with.",
+            "type": "integer",
+            "minimum": 0,
+            "maximum": 255
+        },
+        "messages": {
+            "description": "Contains all log messages normally printed on the screen in the order they were created.",
+            "type": "array",
+            "items": {
+                "description": "A single message.",
+                "type": "object",
+                "required": [
+                    "priority",
+                    "message"
+                ],
+                "additionalProperties": false,
+                "properties": {
+                    "priority": {
+                        "description": "Priority of the log messages as defined at https://confluence.suse.com/display/SAP/Logging+Guide.",
+                        "type": "string",
+                        "enum": [
+                            "CRITICAL",
+                            "ERROR",
+                            "WARNING",
+                            "NOTICE",
+                            "INFO",
+                            "DEBUG"
+                        ]
+                    },
+                    "message": {
+                        "description": "The log message itself.",
+                        "type": "string",
+                        "minLength": 1,
+                        "examples": [
+                            "main.go:57: saptune (3.0.2) started with 'saptune status'",
+                            "system.go:235: saptune terminated with exit code '1'"
+                        ]
+                    }
+                }
+            }
+        }
+    }
+}
