@@ -124,6 +124,7 @@ Overview of the properties used in the JSON output
 | `Notes available`       | `result` | yes       | array of objects   | List of the available Notes.                            | `saptune note list`                                |  `[ {"Note ID": "1410736", ...}, ... ]`
 | `Notes enabled`         | `result` | yes       | array of strings   | List of the enabled Notes.                              | `saptune note list`,</br> `saptune note verify`,</br> `saptune solution verify`,</br> `saptune [daemon\|service] status`</br>, `saptune note enabled` | `[ "941735", "1771258" ]`
 | `Notes applied`         | `result` | yes       | array of strings   | List of the applied Notes.                              | `saptune [daemon\|service} status`,</br> `saptune note applied`     | `[ "941735", "1771258"]`
+| `orphaned Overrides`    | `result` | yes       | array of strings   | List of the orphaned Override files (file names). | `saptune [daemon\|service} status` | `["1656250", "HANA.sol"]`
 | `Notes applied by Solution` | `result` | yes       | array of strings   | List of the applied Notes.                              | `saptune [daemon\|service} status`,</br> `saptune note applied`     | `[ "941735", "1771258"]`
 | `Notes enabled additionally` | `result` | yes    | array of strings   | List of additional (to a Solution) applied Notes.                              | `saptune [daemon\|service} status` | `[ "941735", "1771258"]`
 | `Solutions available`   | `result` | yes       | array of objects   | List of the available Solutions.                        | `saptune solution list`                                             | `[ { "Solution name": "BOBJ", ... }, ... ]`
